--- a/lypchat/src/main/AndroidManifest.xml
+++ b/lypchat/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
 
     <application
         android:name=".App"
-        android:icon="@drawable/icon"
+        android:icon="@drawable/chat_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
 
