--- a/lypchat/src/main/AndroidManifest.xml
+++ b/lypchat/src/main/AndroidManifest.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.avoscloud.chat"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:versionCode="19"
-    android:versionName="1.0.3">
+    android:versionName="1.0.3" >
 
     <uses-sdk android:minSdkVersion="15" />
 
@@ -15,39 +14,38 @@
     <uses-permission android:name="android.permission.READ_LOGS" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.VIBRATE" />
-
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.GET_TASKS" />
     <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
-
 
     <!-- baidumap 所需的权限 -start -->
     <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.BROADCAST_STICKY" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!-- baidumap 所需的权限 -end -->
 
-    <!--location-->
-    <!-- 这个权限用于进行网络定位-->
+
+    <!-- location -->
+    <!-- 这个权限用于进行网络定位 -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <!-- 这个权限用于访问GPS定位-->
+    <!-- 这个权限用于访问GPS定位 -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <!-- SD卡读取权限，用户写入离线定位数据-->
+    <!-- SD卡读取权限，用户写入离线定位数据 -->
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
-    <!-- baidumap 所需的权限 -end -->
 
     <application
         android:name=".App"
         android:icon="@drawable/chat_icon"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
-
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".activity.ChatRoomActivity"
-            android:launchMode="singleTask" />
+            android:launchMode="singleTask"
+            android:theme="@style/AppTheme" />
 
-        <receiver android:name="com.avoscloud.chat.service.LeanchatReceiver">
+        <receiver android:name=".service.LeanchatReceiver" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.USER_PRESENT" />
@@ -58,14 +56,13 @@
 
         <service android:name="com.avos.avoscloud.PushService" />
 
-        <receiver android:name="com.avos.avoscloud.AVBroadcastReceiver">
+        <receiver android:name="com.avos.avoscloud.AVBroadcastReceiver" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.USER_PRESENT" />
             </intent-filter>
         </receiver>
-
-        <receiver android:name=".service.NotificationBroadcastReceiver">
+        <receiver android:name=".service.NotificationBroadcastReceiver" >
             <intent-filter>
                 <action android:name="com.avoscloud.chat.intent.client_notification" />
             </intent-filter>
@@ -74,51 +71,60 @@
         <activity
             android:name=".activity.MainActivity"
             android:launchMode="singleTask"
-            android:theme="@style/AVActivity.NoActionBar">
+            android:theme="@style/AppTheme" >
             <intent-filter>
-                <action android:name="com.avos.leanchart.MAIN_ACTIVITY"/>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="com.avos.leanchart.MAIN_ACTIVITY" />
+
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".activity.UpdateContentActivity"/>
-
+        <activity
+            android:name=".activity.UpdateContentActivity"
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".activity.EntrySplashActivity"
-            android:theme="@style/AVActivity.NoActionBar">
+            android:theme="@style/AppTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name="com.avoscloud.leanchatlib.activity.ImageBrowserActivity" />
-
-        <activity android:name=".activity.LocationActivity"/>
-
-        <activity android:name=".activity.EntryLoginActivity"
-                  android:theme="@style/AVActivity.NoActionBar"/>
-
-        <activity android:name=".activity.EntryRegisterActivity"
-                  android:theme="@style/AVActivity.NoActionBar"/>
-
-        <activity android:name=".friends.ContactNewFriendActivity"/>
-
-        <activity android:name=".friends.ContactAddFriendActivity"/>
-
-        <activity android:name=".friends.ContactPersonInfoActivity"/>
-
-        <activity android:name=".activity.ProfileNotifySettingActivity"/>
-
+        <activity
+            android:name="com.avoscloud.leanchatlib.activity.ImageBrowserActivity"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activity.LocationActivity"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activity.EntryLoginActivity"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activity.EntryRegisterActivity"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".friends.ContactNewFriendActivity"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".friends.ContactAddFriendActivity"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".friends.ContactPersonInfoActivity"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activity.ProfileNotifySettingActivity"
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".activity.ConversationGroupListActivity"
-            android:label="@string/conversation_group"/>
-
-        <activity android:name=".activity.ConversationDetailActivity"/>
-
+            android:label="@string/conversation_group"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activity.ConversationDetailActivity"
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".activity.ConversationAddMembersActivity"
-            android:label="@string/conversation_inviteMembers"/>
+            android:label="@string/conversation_inviteMembers"
+            android:theme="@style/AppTheme" />
 
         <service
             android:name="com.baidu.location.f"
@@ -131,9 +137,33 @@
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="qdgGT2wl1aOFbeZfQwruDDY8" />
 
-        <!--prod-->
-        <!--<meta-data
+        <!-- prod -->
+        <!--
+            <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
-            android:value="PUT3u7lIPY49Ck0bqceFA3ue" />-->
+            android:value="PUT3u7lIPY49Ck0bqceFA3ue" />
+        -->
+        <activity
+            android:name=".myspace.MySpaceActivity"
+            android:label="@string/title_activity_my_space"
+            android:theme="@style/AppTheme" >
+        </activity>
+        <activity
+            android:name=".myspace.SignatureAcivity"
+            android:label="@string/title_activity_signature_acivity" >
+        </activity>
+        <activity
+            android:name=".activity.BlankActivity"
+            android:label="@string/title_activity_blank" >
+        </activity>
+        <activity
+            android:name=".myspace.MyBaseActivity"
+            android:label="@string/title_activity_set_name"
+            android:parentActivityName=".activity.BaseActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.avoscloud.chat.activity.BaseActivity" />
+        </activity>
     </application>
+
 </manifest>
